--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
             nihil asperiores quidem?
           </p>
         </div>
-        <img class="event__image" src="./images/frontend.png" alt="Front-end" />
+        <img class="event__image" src="./images/ui-ux.png" alt="UI-UX" />
       </div>
     </section>
     <section class="event event--data-science">
@@ -83,7 +83,7 @@
             nihil asperiores quidem?
           </p>
         </div>
-        <img class="event__image" src="./images/backend.png" alt="Front-end" />
+        <img class="event__image" src="./images/data.png" alt="Data-Science" />
       </div>
     </section>
     <section class="event event--backend event--image-left">
@@ -97,7 +97,7 @@
             nihil asperiores quidem?
           </p>
         </div>
-        <img class="event__image" src="./images/frontend.png" alt="Front-end" />
+        <img class="event__image" src="./images/backend.png" alt="Back-end" />
       </div>
     </section>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
