--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EBAC Tech Talks</title>
+    <title>Aniversario Felipe</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,85 +19,97 @@
   <body>
     <header class="hero">
       <div class="container">
-        <img class="hero__logo" src="./images/ebac_logo.svg" alt="EBAC" />
+        <img class="hero__logo" src="/src/images/assesoria_niver.png" alt="" />
         <p class="hero__text">
-          O maior evento de tecnologia do Brasil começa em
+          Aniversario de Felipe começa em
           <span id="contador"></span>
         </p>
         <div class="infos-bar">
           <ul class="infos-bar__infos">
             <li class="infos-bar__infos__item">
               <b> Localização </b>
-              Allianz Parque - Barra Funda - São Paulo
+              Av. Prof. Manuel José Chaves, 291 - Alto de Pinheiros - São Paulo
             </li>
             <li class="infos-bar__infos__item">
-              <b> Preço </b>
-              A partir de R$ 120,00
+              <b> Horário </b>
+              A partir das 19hrs
             </li>
             <li class="infos-bar__infos__item">
               <b> Quando </b>
-              12/12/2022 às 19hrs
+              15/11/2024
             </li>
           </ul>
-          <a href="#" class="button button--primary"> Garanta sua vaga </a>
+          <a href="#" class="button button--primary"> Confirmar presença </a>
         </div>
       </div>
     </header>
 
-    <section class="event event--frontend">
+    <section class="event event--melhores_amigos">
       <div class="container" data-aos="fade-right">
         <div class="event-details">
-          <h2 class="event__details__title">Front-end</h2>
+          <h2 class="event__details__title">
+            O melhor aniversário com as melhores pessoas
+          </h2>
           <p class="event__details__description">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni
-            consequatur aperiam consequuntur iure sit beatae animi ipsam error.
-            Ratione expedita error debitis inventore accusantium vero? At culpa
-            nihil asperiores quidem?
+            Aniversário é celebrado com as melhores pessoas. Espero você no meu
+            dia!
           </p>
         </div>
-        <img class="event__image" src="./images/frontend.png" alt="Front-end" />
+        <img
+          class="event__image"
+          src="./images/amigos_felipe-2.png"
+          alt="Amigos Felipe"
+        />
       </div>
     </section>
-    <section class="event event--ux-ui event--image-left">
+    <section class="event event--pessoas_certas event--image-left">
       <div class="container" data-aos="fade-left">
         <div class="event-details">
-          <h2 class="event__details__title">UX/UI</h2>
+          <h2 class="event__details__title">
+            Envelhecer com as pessoas certas
+          </h2>
           <p class="event__details__description">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni
-            consequatur aperiam consequuntur iure sit beatae animi ipsam error.
-            Ratione expedita error debitis inventore accusantium vero? At culpa
-            nihil asperiores quidem?
+            Só vale a pena envelhecer na companhia das pessoas certas. Venha
+            fazer parte da minha celebração!
           </p>
         </div>
-        <img class="event__image" src="./images/ui-ux.png" alt="UI-UX" />
+        <img
+          class="event__image"
+          src="./images/amigos_felipe-3.png"
+          alt="Pessoas_certas"
+        />
       </div>
     </section>
-    <section class="event event--data-science">
+    <section class="event event--convite_irrecusavel">
       <div class="container" data-aos="fade-right">
         <div class="event-details">
-          <h2 class="event__details__title">Data-Science</h2>
+          <h2 class="event__details__title">Um convite irrecusável</h2>
           <p class="event__details__description">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni
-            consequatur aperiam consequuntur iure sit beatae animi ipsam error.
-            Ratione expedita error debitis inventore accusantium vero? At culpa
-            nihil asperiores quidem?
+            Você não pode recusar este convite! Conto com você no meu
+            aniversário…
           </p>
         </div>
-        <img class="event__image" src="./images/data.png" alt="Data-Science" />
+        <img
+          class="event__image"
+          src="./images/amigos_felipe-4.png"
+          alt="Convite_irrecusavel"
+        />
       </div>
     </section>
-    <section class="event event--backend event--image-left">
+    <section class="event event--sem_desculpa event--image-left">
       <div class="container" data-aos="fade-left">
         <div class="event-details">
-          <h2 class="event__details__title">Back-end</h2>
+          <h2 class="event__details__title">Sem desculpa para celebrar</h2>
           <p class="event__details__description">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni
-            consequatur aperiam consequuntur iure sit beatae animi ipsam error.
-            Ratione expedita error debitis inventore accusantium vero? At culpa
-            nihil asperiores quidem?
+            Não há desculpa melhor para reunir os amigos que uma festa de
+            aniversário. Conto com todos vocês!
           </p>
         </div>
-        <img class="event__image" src="./images/backend.png" alt="Back-end" />
+        <img
+          class="event__image"
+          src="./images/amigos_felipe-5.png"
+          alt="sem_desculpa"
+        />
       </div>
     </section>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
